# exoscale-python-connector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/skills/exoscale-connector/: reference.md
.claude/skills/exoscale-drift-triage/: SKILL.md
.github/: dependabot.yml
.github/upstream/: openapi-v2.json
.github/workflows/: ci.yml  release.yml  upstream-drift.yml
ci/: constraints-min.txt
docs/: developer-guide.md  iam-policy-cookbook.md  live-test-plan.md  live-test-results.md  llms.txt  roadmap.md  user-guide.md
docs/asset-types/: README.md  anti-affinity-group.md  api-key.md  block-volume-snapshot.md  block-volume.md  dbaas.md  deploy-target.md  dns.md  elastic-ip.md  event.md  iam-role.md  iam-user.md  instance-pool.md  instance-type.md  instance.md  kms.md  load-balancer.md  object-storage.md  private-network.md  security-group.md  sks.md  snapshot.md  ssh-key.md  template.md  vpc.md  zone.md
scripts/: drift_operations.py  generate_llms_txt.py  model_schema_drift.py  upstream_drift_map.py
src/exoscale_connector/: __init__.py  auth.py  client.py  config.py  errors.py  iam_expr.py  models.py  wait.py
src/exoscale_connector/_skill/: SKILL.md  reference.md
src/exoscale_connector/cli/: __init__.py  _base.py  anti_affinity_group.py  api_key.py  block_volume.py  block_volume_snapshot.py  dbaas.py  deploy_target.py  dns.py  elastic_ip.py  event.py  iam_role.py  iam_user.py  instance.py  instance_pool.py  instance_type.py  kms.py  load_balancer.py  main.py  object_storage.py  private_network.py  security_group.py  skill.py  sks.py  snapshot.py  ssh_key.py  template.py  vpc.py  zone.py
src/exoscale_connector/resources/: __init__.py  _base.py  _reverse_dns.py  anti_affinity_group.py  api_key.py  block_volume.py  block_volume_snapshot.py  dbaas.py  deploy_target.py  dns.py  elastic_ip.py  event.py  iam_role.py  iam_user.py  instance.py  instance_pool.py  instance_type.py  kms.py  load_balancer.py  object_storage.py  private_network.py  security_group.py  sks.py  snapshot.py  ssh_key.py  template.py  vpc.py  zone.py
tests/: conftest.py
tests/integration/: __init__.py  _fixtures.py  _recorder.py  conftest.py  test_kms.py  test_smoke.py  test_tier_1.py  test_tier_2.py  test_tier_3.py  test_tier_4.py
tests/unit/: test_anti_affinity_group.py  test_api_key.py  test_auth.py  test_block_volume.py  test_block_volume_snapshot.py  test_cli.py  test_cli_main.py  test_cli_skill.py  test_client.py  test_config.py  test_dbaas.py  test_deploy_target.py  test_dns.py  test_drift_operations.py  test_elastic_ip.py  test_ensure.py  test_event.py  test_iam_expr.py  test_iam_role.py  test_iam_user.py  test_instance.py  test_instance_pool.py  test_instance_type.py  test_kms.py  test_llms_txt.py  test_load_balancer.py  test_min_constraints.py  test_model_schema_drift.py  test_models.py  test_object_storage.py  test_private_network.py  test_recorded_replay.py  test_recorder.py  test_reverse_dns.py  test_security_group.py  test_sks.py  test_snapshot.py  test_ssh_key.py  test_template.py  test_upstream_drift_map.py  (+4 more)
